# Music-NEA-project

./: CMakeLists.txt  File_view.qml  Main.qml  globals.cpp  globals.h  main.cpp
UI/: Break_manager.qml  CMediaPlayer.qml  Display_window.qml  Mixer.qml  Music_scroll_view.qml  Part_maker.qml  Sync_manager.qml
data_parsing/: audio_parser.cpp  audio_parser.h  mei_parser.cpp  mei_parser.h  parser_data.cpp  parser_data.h  selection_handler.cpp  selection_handler.h  xml_parser.cpp  xml_parser.h
file_opening/: audio_options.cpp  audio_options.h  file_open.cpp  file_open.h  main_options.cpp  main_options.h  scan_existing.cpp  scan_existing.h
part_objects/: part_manager.cpp  part_manager.h  part_object.cpp  part_object.h
render/: audio_player.cpp  audio_player.h  image_provider.cpp  image_provider.h  render_file.cpp  render_file.h  resvg_loader.cpp  resvg_loader.h  svgrenderer.cpp  svgrenderer.h  verovio_loader.cpp  verovio_loader.h
track_objects/: track_manager.cpp  track_manager.h  track_object.cpp  track_object.h
